# dcc-playground

./: .gitignore  Cargo.toml  README.md
aws-lambda/: Cargo.toml  README.md
aws-lambda/src/: main.rs
benches/: benchmark.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/rust_dgc/: all.html  enum.SigningKey.html  enum.VerificationKey.html  fn.get_payload.html  index.html  macro.from_byte_string!.html  macro.from_byte_string.html  macro.to_byte_string!.html  macro.to_byte_string.html  sidebar-items.js  struct.CwtParsed.html
doc/rust_dgc/base45/: fn.decode.html  fn.encode.html  index.html  sidebar-items.js  struct.InvalidCharacter.html
doc/src/rust_dgc/: base45.rs.html  lib.rs.html
only-decode/dgc-decode/: Cargo.toml  LICENSE_MIT
only-decode/dgc-decode/src/: base45.rs  decode.rs  lib.rs
src/: base45.rs  lib.rs  list  main.rs
web/dgc-web/: Cargo.toml  certs_abn.csv  certs_prod.csv  getActiveCerts.sh  package.json
web/dgc-web/js/: index.js
web/dgc-web/output/: 1.js  index.html  index.js
web/dgc-web/src/: lib.rs
web/dgc-web/static/: index.html
