[package]
name = "rust-dgc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bencher = "0.1.5"
rand = "0.8.3"
ring = "0.16.20"
serde = {version = "1.0.125", features = ['derive']}
serde_cbor = "0.11.1"
serde_json = "1.0.64"
x509-parser = "0.9.2"

[[bench]]
name = "benchmark"
harness = false
