[package]
name = "rust-dgc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bencher = "0.1.5"
rand = "0.8.3"
ring = {version = "0.16.20", features = ["wasm32_c"]}
serde = {version = "1.0.125", features = ['derive']}
getrandom = {version = "0.2.2", features = ["js"]}
serde_cbor = "0.11.1"
serde_json = "1.0.64"
x509-parser = "0.9.2"
p256 = {version = "0.8.0", features = ["jwk"]}
simple_asn1 = "0.5.3"

image = "0.23.14"
rqrr = "0.3.2"
# zip = { version = "0.5.12", default-features = false, features = ['deflate-zlib'] }
flate2 = {version = "1.0.20", default-features =false, features = ["zlib"]}
base45 = "2.0.1"
qrcode = "0.12.0"
# flate2 = "1.0.20"
# flate2 = "1.0.20"

[[bench]]
name = "benchmark"
harness = false
