[package]
name = "aws-lambda"
version = "0.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = {version = "1.0.20", default-features =false, features = ["zlib"]}
image = "0.23.14"
lambda_runtime = "^0.3"
p256 = "0.9.0"
qrcode = "0.12.0"
rand = "0.8.3"
rust-dgc = {version = "*", path = "../"}
serde = "1.0.126"
serde_cbor = "0.11.1"
serde_json = "1.0.64"
tokio = {version = "1.7.1", features = ['macros']}
