[package]
name = "dgc-decode"
version = "0.1.2"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
serde_cbor = "0.11.2"
base64 = "0.13.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
flate2 = {version = "1.0.23", default-features = false, features = ["rust_backend"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
